--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   bloc: ^9.0.0
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_bloc: ^9.1.1
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
