Criação de Observações, Snack Bar de Sucesso e Modal de deleção.

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "scotti_seguros" "\0"
+            VALUE "FileDescription", "Scotti Seguros" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "scotti_seguros" "\0"
+            VALUE "InternalName", "Scotti Seguros" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "scotti_seguros.exe" "\0"
-            VALUE "ProductName", "scotti_seguros" "\0"
+            VALUE "ProductName", "Scotti Seguros" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
